<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_local_atm_black_24dp"
            android:contentDescription="@string/icon_cajero" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_cajero" />

            <EditText
                android:id="@+id/nombre_cajero"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_cajero"
                android:inputType="text" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_pin_drop_black_24dp"
            android:contentDescription="@string/icon_direccion" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/direccion_cajero" />

            <EditText
                android:id="@+id/direccion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion_cajero"
                android:inputType="text" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_access_time_black_24dp"
            android:contentDescription="@string/icon_horario" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/horario_atencion" />

            <Button
                android:id="@+id/horario"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_seguir"
                android:gravity="left|center_vertical"
                android:text="@string/seleccionar_dias_y_horas"
                android:textAllCaps="false"
                android:textSize="10sp"
                android:theme="@style/MyButton"
                tools:ignore="RtlHardcoded,SmallSp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_public_black_24dp"
            android:contentDescription="@string/icon_sitio_web" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sitio_web" />

            <EditText
                android:id="@+id/sitio_web"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sitio"
                android:inputType="textUri" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_store_black_24dp"
            android:contentDescription="@string/icono_nombre_entidad_financiera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_entidad_financiera" />

            <Button
                android:id="@+id/nombreEF"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_seguir"
                android:gravity="left|center_vertical"
                android:text="@string/seleccionar_nombre_entidad_financiera"
                android:textAllCaps="false"
                android:textSize="10sp"
                android:theme="@style/MyButton"
                tools:ignore="RtlHardcoded,SmallSp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
