<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/cercanos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cercanos"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/tiempo_distancia"
        android:layout_toStartOf="@+id/tiempo_distancia"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/pasos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:text="@string/pasos"
        android:visibility="invisible"
        tools:ignore="RelativeOverlap,RtlHardcoded"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:id="@+id/tiempo_distancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:background="@color/common_google_signin_btn_text_light_disabled"
        android:orientation="horizontal"
        android:visibility="invisible"
        tools:ignore="RtlHardcoded">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_km"
                android:textColor="@color/cardview_dark_background" />

            <ImageView
                android:id="@+id/imagedistancia"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/distancia1"
                app:srcCompat="@drawable/ic_distance"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded,UseCompoundDrawables">

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_min"
                android:textColor="@color/cardview_dark_background" />

            <ImageView
                android:id="@+id/imagetiempo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/tiempo1"
                app:srcCompat="@drawable/ic_clock" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_pasos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="400dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:visibility="invisible"
        tools:ignore="RtlSymmetry">

    </android.support.v7.widget.RecyclerView>


</RelativeLayout>