<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    card_view:cardCornerRadius="1dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:orientation="vertical"
        android:padding="2dp">

        <LinearLayout
            android:id="@+id/parent_body_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <ImageView
                android:id="@+id/foto1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:contentDescription="@string/logo_banco_rv"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/nombre1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/nombres_del_lugar"
                        android:textAllCaps="true"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="20sp"
                        tools:ignore="RtlHardcoded" />

                    <ImageView
                        android:id="@+id/imag_valoracion"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/imag_valoracion"
                        android:padding="5dp" />
                </LinearLayout>


                <TextView
                    android:id="@+id/direccion1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/direcci_n_del_lugar"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />

                <RatingBar
                    android:id="@+id/valoracion1"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="3"
                    android:rating="3"
                    android:stepSize="1.0" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
